add: api仕様
datamodel-codegenでmodel 生成
